--- a/composition.scss
+++ b/composition.scss
@@ -1,55 +1,73 @@
-.main-layout{
-    width: 100vw;
-   
+
+.header-layout{
+  
+    max-height: 115vh;
+    max-width: 100vw;
+    overflow: hidden;
+    margin: 0 auto;
+   padding: 1.5rem;
+ 
 
 }
 
-
-.header-layout {
+.container{
     display: flex;
-    height: 115vh;
-    width: 100vw;
-    overflow: hidden;
+    justify-content: space-between;
+      width:100vw;
+      height: 15vh;
+      padding: 1.2rem;
+      border: none;
+     
+
+    > p{
+        display: inline-block;
+        padding: 0.2rem;
+         width: 30vw;         
+         font-size: 2rem;
+         border: none;
+         font-weight: 650;
+         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+         text-align: center;
+         line-height: 2rem;
+         
+       
+}
+}
+
+.header-img-layout{
+
+    border-image-width: 100vw;
+    padding: 1rem;
+    margin: auto;
+   
+}
+
+.aboutus{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5rem;
+    border-radius: 20px;
+    font-weight: 400;
+    text-align: center;
+    background-color:var(--background-100) ;
+    width: 70vw;
+    padding: 0.5rem;
+    margin: 0.8rem auto;
+    border: 0.1rem;   
     
 }
 
+.gallery{
+    display: flex;
+    justify-content: center;
+    margin-block-start:auto;
+    width: 85vw;
+    margin: auto;
 
-.container {
-     display: flex;
-      width:100vw;
-
-    > p {
-
-        text-align: center;
-        padding:  20px;
-        flex-direction: row;
-}
-}
-
-.header-img-layout {
-    display: block
-    width:100vw;
-    padding: auto;
-
-
+.imggallery{
+        flex: 50%;
+        padding: 0.5rem;
+        width:30vw;  
+     }
 
 }
-
-
-justify-content: flex-start;
-align-content: space-around;  
-flex-direction: row; 
-width: max-content;
-column-gap: 1.5rem;
-flex:2
-
-display: flex;
-flex-wrap: wrap;
-flex: 1;
-max-width: 100vw;
-height: auto;
-margin-bottom: 0%;
-justify-content: flex-end;
-vertical-align: bottom;
-align-items: center;
 
