--- a/utilities.scss
+++ b/utilities.scss
@@ -90,23 +90,20 @@
   border: 2px solid currentColor;
   font-size: 0.8rem;
   border: none;
-  
-  
-  
+  cursor: pointer;
 
-  a{
+  > a{
       color: var(--text-900);
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       font-size: 1rem;
       font-weight: 600;
-      text-decoration: none;
-      cursor: pointer;
+      text-decoration:none;
+      
 
 }
 }
 
 .info-buttons {
-
   background: none;
   border-color:black;
   border-radius: 20%;
@@ -114,29 +111,89 @@
   cursor: pointer;
 }
  
-.header-style{
-  background: var(--text-200);
-
-}
-
-.header-text-style{
-
-  > p{
-
-    font-family: Arial, Helvetica, sans-serif; 
-    font-size: 2rem; 
-    font-weight: 650;
-  
-  }
- 
-
-}
 
 .main-layout {
- 
-  line-height: 1.5;
+  line-height: 1.5rem;
   color: hsl(0deg 0% 5%);
   background: var(--text-200);
+  max-width: 100vw;
+}
+
+.bottomnav{
+  display: flex;
+  justify-content: center;
+  margin-block-start:auto;
+  width: 100vw;
+  margin: 0 auto;
+  
+  
+   > .page-nav .awardimg{
+      flex: 33.33%;
+      padding: 0.5rem;
+      margin: 0.2rem;
+      align-items: center;
+     
+  }
+
+   > .page-nav{
+      height: auto;
+      margin: 5rem;
+      padding: 0.5rem;
+      border: 10px;
+      background-color:var(--background-100) ;
+      text-align: center;
+      align-content: center;
+      width: 12vw;
+      cursor: pointer;
+      
+
+      > a{
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-size: 1rem;
+      font-weight: 600;
+      text-decoration:none;
+      }
+
+      &:hover{
+        scale: 1.2;
+        transition: scale 150ms;
+        background: var(--background-600);
+      }
+
+  }
+
+  .awardimg{
+     border-radius: 20px;
+     margin-bottom: 0.1rem;
+     width: 30vw;
+        
+    }
+}
+
+.pagetitle{
+  text-align: center;
+  font-size: 1.8rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 500;
+  padding: 1rem;
+  margin: 0.3rem auto;
+
+}
+
+.grid2col{
+  display: grid;
+  grid-template: 1fr / 1fr 1fr;
+  height:75vh;
+  overflow: hidden;
+
+  > form{
+    grid-area: 1 , 1 , 2 , 2;
+  }
+
+  > img{
+    grid-area: 1 , 2 , 2 , 3 ;
+  }
+
 }
 
 .footer{
