--- a/composition.scss
+++ b/composition.scss
@@ -63,7 +63,7 @@
     width: 85vw;
     margin: auto;
 
-.igallery{
+ > .imggallery{
         flex: 50%;
         padding: 0.5rem;
         width:30vw;  
