--- a/utilities.scss
+++ b/utilities.scss
@@ -75,7 +75,7 @@
 
     
     @media (width< 1180px) {
-       min-width: 100vw;
+       max-width: 100vw;
       
     
 
@@ -110,9 +110,6 @@ cursor: pointer;
 
             @media (max-width: 650px) {
               max-width: 12vw;
-              
- 
-        
            }
 
 
