--- a/utilities.scss
+++ b/utilities.scss
@@ -74,7 +74,7 @@
     overflow-x: hidden;
 
     
-    @media (width< 1180px) {
+    @media screen and  (width<= 1180px) {
        max-width: 100vw;
       
     
@@ -90,11 +90,11 @@
       font-style: italic;
       font-family: cursive;
      
-      @media (width< 1000px) {
+      @media screen and (width<= 1000px) {
         font-size: 2rem;
         
     }
-    @media (width< 650px) {
+    @media screen and  (width<= 650px) {
       font-size: 1.5rem;
       
   }
@@ -108,7 +108,7 @@ border-radius: 0.5rem;
 border: none;
 cursor: pointer;
 
-            @media (max-width: 650px) {
+            @media screen and (width<= 650px) {
               max-width: 12vw;
            }
 
@@ -123,23 +123,22 @@ cursor: pointer;
    
 
     
-    @media (max-width: 650px) {
+    @media screen and  (width<= 650px) {
       font-size: 0.8rem;
-     
-            
-  }
-  @media (max-width: 560px) {
+      
+       }
+  @media screen and  (max-width<= 560px) {
   font-size: 0.5rem;
  
   
-  }
+     }
 
  
 
 
-       }
+             }
+      }
    }
-}
        .info-buttons {
         background: none;
         border-color:black;
