--- a/blockM.scss
+++ b/blockM.scss
@@ -1,3 +1,5 @@
+// the button of the footer
+
 button{
     background-color: var(--background-300);
     border-radius: 0.5rem;
@@ -12,21 +14,6 @@ button{
         font-weight: 600;
         text-decoration: none;
         cursor: pointer;
-        
-        
-        @media (max-width: 650px) {
-            font-size: 0.8rem;
-            
-        }
-        @media (max-width: 560px) {
-        font-size: 0.5rem;
-        }
-        @media (max-width: 490px) {
-        font-size: 0.4rem;
-        }
-        @media (max-width: 340px) {
-        font-size: 0.2rem;
-        }
 
     }   
 }
