--- a/compositionE.scss
+++ b/compositionE.scss
@@ -4,34 +4,331 @@ body{
     flex-direction: column;
 }
 
-.navigation{
+// the top page 
+
+.top-nav-style{
+    flex: 1;
     display: flex;
-    width: 100%;
+    margin-inline: auto;
+    height: 12vh;
+    align-items: center; 
+    background-color: var(--background-600);
 
-
-    .title{
-        flex-grow: 1;
+        
+    
+    > h1 {
+        font-weight: 500;
+        font-size: 2.5rem;
+        letter-spacing: 0.35em;
+        font-style: italic;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        flex: 1;
         text-align: center;
-        padding: 0.5rem;
-        font-size: 1.5rem;
+        
+        @media (max-width:950px) {
+            font-size: 2.4rem;
+            
+        }
+        @media (max-width:900px) {
+            font-size: 2.3rem;
+            
+        }
+        @media (max-width:850px) {
+            font-size: 2.2rem;
+            
+        }
+        @media (max-width:800px) {
+            font-size: 2.1rem;
+            
+        }
+        @media (max-width:750px) {
+            font-size: 2rem;
+            
+        }
+        @media (max-width:700px) {
+            font-size: 1.9rem;
+            
+        }
+        @media (max-width:650px) {
+            font-size: 1.8rem;
+            
+        }
+        @media (max-width:600px) {
+            font-size: 1.7rem;
+            
+        }
+        @media (max-width:550px) {
+            font-size: 1.6rem;
+            
+        }
+        @media (max-width:500px) {
+            font-size: 1.3rem;
+            
+        }
+        @media (max-width:450px) {
+            font-size: 1.1rem;
+            
+        }
+        @media (max-width:400px) {
+            font-size: 0.9rem;
+            
+        }
+        @media (max-width:350px) {
+            font-size: 0.7rem;
+            
+        }
+        @media (max-width:300px) {
+            font-size: 0.5rem;
+            
+        }
+        @media (max-width:250px) {
+            font-size: 0.3rem;
+            
+        }
+        
     }
 
+.page-nav {
+  background-color: var(--background-300);
+  border-radius: 0.5rem;
+  border: 2px solid currentColor;
+  font-size: 0.8rem;
+  border: none;
+//   cursor: pointer;
+
+  
+//   the button of the top page
+  
+  
+  a{
+      color: var(--text-900);
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-size: 2rem;
+      font-weight: 600;
+      text-decoration: none;
+      cursor: pointer;
+
+      @media (max-width:1200px) {
+        font-size: 1.1rem;
+        
+    }
+    @media (max-width:695px) {
+        font-size: 1rem;
+        
+    }
+    @media (max-width:625px) {
+        font-size: 0.9rem;
+        
+    }
+    @media (max-width:605px) {
+        font-size: 0.8rem;
+        
+    }
+    @media (max-width:585px) {
+        font-size: 0.7rem;
+        
+    }
+    @media (max-width:565px) {
+        font-size: 0.6rem;
+        
+    }
+    @media (max-width:535px) {
+        font-size: 0.5rem;
+        
+    }
+    @media (max-width:515px) {
+        font-size: 0.4rem;
+        
+    }
+    @media (max-width:365px) {
+        font-size: 0.3rem;
+        
+    }
+    @media (max-width:265px) {
+        font-size: 0.2rem;
+        
+    }
+     
+      
+    }
+  }
+  
+  .info-buttons {
+      background: none;
+      border-color:black;
+      border-radius: 20%;
+      border-width: 0.15rem;
+      cursor: pointer;
+      
+      img{
+          cursor: pointer;
+        }
+  }
+  
+  
 }
 
 
+.main{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    background-color: var(--text-200);
+
+    .top-main{
+        grid-area: 1 / 1 / 2 / 4;
+        font-size: 1.6rem;
+
+        @media (min-width: 1500px) {
+            font-size: 2.2rem;
+            
+        }
+        @media (min-width: 2000px) {
+            font-size: 2.5rem;
+            
+        }
+        @media (min-width: 2500px) {
+            font-size: 4rem;
+            
+        }
+        @media (max-width: 260px) {
+            font-size: 0.8rem;
+            
+        }
+        @media (max-width: 140px) {
+            font-size: 0.5rem;
+            
+        }
+
+        p{
+            margin-top: 2rem;
+        }
+        h2{
+            margin-top: 2rem;
+        }
+    }
+
+    .first-event-pargraph{
+       grid-area: 2 / 1 / 3 / 4;
+       margin: 1rem;
+       font-size: 1rem;
+
+    @media (min-width: 1500px) {
+        font-size: 2rem;
+        
+    }
+    @media (min-width: 2000px) {
+        font-size: 2.4rem;
+        
+    }
+    @media (min-width: 2500px) {
+        font-size: 2.8rem;
+        
+    }
+    @media (min-width: 5000px) {
+        font-size: 4rem;
+        
+    }
+
+       @media (max-width: 150px) {
+        font-size: 0.5rem;
+        
+    }
+    }
+
+    .information-paragraph{
+        grid-area: 2 / 1 / 3 / 4;
+        font-size: 1rem;
+
+        @media (min-width: 1500px) {
+            font-size: 1.4rem;
+            
+        }
+        @media (min-width: 2000px) {
+            font-size: 1.8rem;
+            
+        }
+        @media (min-width: 2500px) {
+            font-size: 2.2rem;
+            
+        }
+        @media (min-width: 5000px) {
+            font-size: 4rem;
+            
+        }
+    
+           @media (max-width: 150px) {
+            font-size: 0.5rem;
+            
+        }
+    }
+
+    .img-1{
+        grid-area: 3 / 1 / 5 / 4;
+        padding: 0.3rem;
+        // width: 500px;
+
+        // @media (max-width: 680px) {
+        //     width: 650px;
+            
+        // }
+    }
+}
+
+
+// footer
 
 .end{
     margin-top: auto;
-
-    .footer{
-        display: flex;
-        justify-content: space-between;
-        border: 2px solid black;
-        border-radius: 0.5rem;
-        font-size: 1rem;
-
-        p{
+        
+        .footer{
+            display: flex;
+            justify-content: space-between;
+            border: 2px solid black;
+            border-radius: 0.5rem;
             font-size: 1rem;
+            
+            p{
+                font-size: 1rem;
+            }
+    
+            @media (max-width: 470px) {
+                font-size: 0.8rem;
+                p, a{
+                    font-size: 0.8rem;
+                }
+            }
+    
+            @media (max-width: 370px) {
+                font-size: 0.6rem;
+                align-items: center;
+                p, a{
+                    font-size: 0.6rem;
+                }
+            }
+            @media (max-width: 290px) {
+                font-size: 0.5rem;
+                p, a{
+                    font-size: 0.5rem;
+                }
+            }
+            @media (max-width: 250px) {
+                font-size: 0.4rem;
+                p, a{
+                    font-size: 0.4rem;
+                }
+            }
+            @media (max-width: 210px) {
+                font-size: 0.2rem;
+                p, a{
+                    font-size: 0.2rem;
+                }
+            }
         }
+        
+        
+        
     }
-}
