--- a/compositionM.scss
+++ b/compositionM.scss
@@ -4,64 +4,166 @@ body{
     flex-direction: column;
 }
 
+// the top page 
+
 .top-nav-style{
     flex: 1;
     display: flex;
     margin-inline: auto;
     height: 12vh;
     align-items: center; 
-    justify-content: space-around;
     background-color: var(--background-600);
 
         
     
     > h1 {
-        font-weight: 900;
+        font-weight: 500;
         font-size: 2.5rem;
         letter-spacing: 0.35em;
         font-style: italic;
-        font-family: cursive;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        flex: 1;
+        text-align: center;
         
-        @media (max-width:760px) {
+        @media (max-width:950px) {
+            font-size: 2.4rem;
+            
+        }
+        @media (max-width:900px) {
             font-size: 2.3rem;
             
         }
-        @media (max-width:760px) {
-            font-size: 2.3rem;
+        @media (max-width:850px) {
+            font-size: 2.2rem;
             
         }
-        @media (max-width:760px) {
-            font-size: 2.3rem;
+        @media (max-width:800px) {
+            font-size: 2.1rem;
             
         }
-        @media (max-width:760px) {
-            font-size: 2.3rem;
+        @media (max-width:750px) {
+            font-size: 2rem;
             
         }
-        @media (max-width:760px) {
-            font-size: 2.3rem;
+        @media (max-width:700px) {
+            font-size: 1.9rem;
             
         }
+        @media (max-width:650px) {
+            font-size: 1.8rem;
+            
+        }
+        @media (max-width:600px) {
+            font-size: 1.7rem;
+            
+        }
+        @media (max-width:550px) {
+            font-size: 1.6rem;
+            
+        }
+        @media (max-width:500px) {
+            font-size: 1.3rem;
+            
+        }
+        @media (max-width:450px) {
+            font-size: 1.1rem;
+            
+        }
+        @media (max-width:400px) {
+            font-size: 0.9rem;
+            
+        }
+        @media (max-width:350px) {
+            font-size: 0.7rem;
+            
+        }
+        @media (max-width:300px) {
+            font-size: 0.5rem;
+            
+        }
+        @media (max-width:250px) {
+            font-size: 0.3rem;
+            
+        }
+        
     }
 
-    .page-nav {
+.page-nav {
   background-color: var(--background-300);
   border-radius: 0.5rem;
   border: 2px solid currentColor;
   font-size: 0.8rem;
   border: none;
+//   cursor: pointer;
 
   
-  
+//   the button of the top page
   
   
   a{
       color: var(--text-900);
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-size: 1rem;
+      font-size: 2rem;
       font-weight: 600;
       text-decoration: none;
       cursor: pointer;
+
+      @media (max-width:950px) {
+        font-size: 1.9rem;
+        
+    }
+    @media (max-width:900px) {
+        font-size: 1.8rem;
+        
+    }
+    @media (max-width:855px) {
+        font-size: 1.7rem;
+        
+    }
+    @media (max-width:820px) {
+        font-size: 1.6rem;
+        
+    }
+    @media (max-width:780px) {
+        font-size: 1.5rem;
+        
+    }
+    @media (max-width:765px) {
+        font-size: 1.4rem;
+        
+    }
+    @media (max-width:730px) {
+        font-size: 1.2rem;
+        
+    }
+    @media (max-width:690px) {
+        font-size: 1rem;
+        
+    }
+    @media (max-width:620px) {
+        font-size: 0.9rem;
+        
+    }
+    @media (max-width:580px) {
+        font-size: 0.8rem;
+        
+    }
+    @media (max-width:560px) {
+        font-size: 0.7rem;
+        
+    }
+    @media (max-width:530px) {
+        font-size: 0.6rem;
+        
+    }
+    @media (max-width:510px) {
+        font-size: 0.5rem;
+        
+    }
+    @media (max-width:360px) {
+        font-size: 0.4rem;
+        
+    }
      
       
     }
@@ -77,10 +179,6 @@ body{
       img{
           cursor: pointer;
         }
-
-        @media (max-width:550px) {
-            width: 300px;
-        }
   }
   
   
@@ -89,79 +187,285 @@ body{
 
 .main{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, auto);
     grid-auto-flow: column;
     column-gap: 1rem;
     padding: 1rem;
-    
-    li{
-        font-weight: 700;
-    }
+    text-align: center;
 
-    p{
-        font-size: 0.8rem;
-    }
     
-    @media (max-width: 370px) {
-        font-size: 0.6rem;
-        
-    }
-    
-    @media (min-width: 400px) {
-        font-size: 0.8rem;
-
-        p{
-            font-size: 0.6rem;
-        }
-        
-    }
-    @media (min-width: 600px) {
-        font-size: 1rem;
-        
-        p{
-            font-size: 0.8rem;
-        }
-        
-    }
-    @media (min-width: 850px) {
-        font-size: 1.2rem;
-        
-        p{
-            font-size: 1rem;
-        }
-        
-    }
-    
-    @media (min-width: 1050px) {
-        font-size: 1.5rem;
-        
-        
-    }
-    @media (min-width: 1200px) {
+    h2{
         font-size: 2rem;
-        p{
+
+
+
+        @media (min-width: 2000px) {
+            font-size: 5rem;
+
+            h2{
+                font-size: 5rem;
+            }
+           
+        }
+        @media (max-width: 700px) {
+            font-size: 1.9rem;
+
+            h2{
+                font-size: 1.9rem;
+            }
+           
+        }
+           @media (max-width: 650px) {
+            font-size: 1.8rem;
+
+            h2{
+                font-size: 1.8rem;
+            }
+           
+        }
+           @media (max-width: 600px) {
+            font-size: 1.7rem;
+
+            h2{
+                font-size: 1.7rem;
+            }
+           
+        }
+           @media (max-width: 550px) {
+            font-size: 1.6rem;
+
+            h2{
+                font-size: 1.6rem;
+            }
+           
+        }
+           @media (max-width: 500px) {
+            font-size: 1.5rem;
+
+            h2{
+                font-size: 1.5rem;
+            }
+           
+        }
+           @media (max-width: 450px) {
             font-size: 1.4rem;
+
+            h2{
+                font-size: 1.4rem;
+            }
+           
+        }
+           @media (max-width: 400px) {
+            font-size: 1.3rem;
+
+            h2{
+                font-size: 1.3rem;
+            }
+           
+        }
+           @media (max-width: 350px) {
+            font-size: 1.2rem;
+
+            h2{
+                font-size: 1.2rem;
+            }
+           
+        }
+           @media (max-width: 300px) {
+            font-size: 1.1em;
+
+            h2{
+                font-size: 1.1rem;
+            }
+           
+        }
+           @media (max-width: 250px) {
+            font-size: 1rem;
+
+            h2{
+                font-size: 1rem;
+            }
+           
+        }
+           @media (max-width: 200px) {
+            font-size: 0.9rem;
+
+            h2{
+                font-size: 0.9rem;
+            }
+           
+        }
+           @media (max-width: 150px) {
+            font-size: 0.8rem;
+
+            h2{
+                font-size: 0.8rem;
+            }
+           
+        }
+    }
+
+    ul{
+        margin: 1rem;
+        
+    
+        li{
+            font-weight: 700;
+           font-size: 1.4rem;
+
+           @media (min-width: 2000px) {
+            font-size: 3.2rem;
+
+            li{
+                font-size: 3.2rem;
+            }
         }
 
-    }
-    @media (min-width: 1500px) {
-        font-size: 2.5rem;
-        
-    }
-    @media (min-width: 1800px) {
-        font-size: 3rem;
-        
+           @media (max-width: 700px) {
+            font-size: 1.3rem;
+
+            li{
+                font-size: 1.3rem;
+            }
+           
+        }
+           @media (max-width: 650px) {
+            font-size: 1.2rem;
+
+            li{
+                font-size: 1.2rem;
+            }
+           
+        }
+           @media (max-width: 600px) {
+            font-size: 1.2rem;
+
+            li{
+                font-size: 1.2rem;
+            }
+           
+        }
+           @media (max-width: 550px) {
+            font-size: 1.1rem;
+
+            li{
+                font-size: 1.1rem;
+            }
+           
+        }
+           @media (max-width: 500px) {
+            font-size: 1rem;
+
+            li{
+                font-size: 1rem;
+            }
+           
+        }
+           @media (max-width: 450px) {
+            font-size: 0.9rem;
+
+            li{
+                font-size: 0.9rem;
+            }
+           
+        }
+           @media (max-width: 400px) {
+            font-size: 0.8rem;
+
+            li{
+                font-size: 0.8rem;
+            }
+           
+        }
+           @media (max-width: 350px) {
+            font-size: 0.7rem;
+
+            li{
+                font-size: 0.7rem;
+            }
+           
+        }
+           @media (max-width: 300px) {
+            font-size: 0.6rem;
+
+            li{
+                font-size: 0.6rem;
+            }
+           
+        }
+           @media (max-width: 250px) {
+            font-size: 0.5rem;
+
+            li{
+                font-size: 0.5rem;
+            }
+           
+        }
+           @media (max-width: 200px) {
+            font-size: 0.4rem;
+
+            li{
+                font-size: 0.4rem;
+            }
+           
+        }
+           @media (max-width: 150px) {
+            font-size: 0.3rem;
+
+            li{
+                font-size: 0.3rem;
+            }
+           
+        }
+        }
+    
         p{
-            font-size: 2rem;
+            font-size: 1.2rem;
+
+            @media (min-width: 2000px) {
+                font-size: 2.8rem;
+    
+                p{
+                    font-size: 2.8rem;
+                }
+            }
         }
 
-    }
-    @media (min-width: 2100px) {
-        font-size: 3.5rem;
-        
+
     }
 
+
+   
+
+    .starters{
+        grid-area: 1 / 1 / 2 / 3;
+    } 
+
+    .salad{
+        grid-area: 2 / 1 / 3 / 3;
+    } 
+
+    .pasta{
+        grid-area: 3 / 1 / 3 / 3;
+    }
+
+    .pizza{
+        grid-area: 4 / 1 / 5 / 3;
+    }
+
+    .mains{
+        grid-area: 5 / 1 / 6 / 3;
+    }
+
+
+    img{
+        padding: 1rem;
+        min-width: 180px;
+        max-width: 55%;
+        margin: 2rem;
+    }
+    
 
 
 }
@@ -181,7 +485,7 @@ body{
     
             @media (max-width: 470px) {
                 font-size: 0.8rem;
-                p{
+                p, a{
                     font-size: 0.8rem;
                 }
             }
@@ -189,20 +493,26 @@ body{
             @media (max-width: 370px) {
                 font-size: 0.6rem;
                 align-items: center;
-                p{
+                p, a{
                     font-size: 0.6rem;
                 }
             }
             @media (max-width: 290px) {
                 font-size: 0.5rem;
-                p{
+                p, a{
                     font-size: 0.5rem;
                 }
             }
             @media (max-width: 250px) {
                 font-size: 0.4rem;
-                p{
+                p, a{
                     font-size: 0.4rem;
+                }
+            }
+            @media (max-width: 210px) {
+                font-size: 0.2rem;
+                p, a{
+                    font-size: 0.2rem;
                 }
             }
         }
