--- a/utilities.scss
+++ b/utilities.scss
@@ -77,8 +77,6 @@
     @media screen and  (width<= 1180px) {
        max-width: 100vw;
       
-    
-
     }
       
 
@@ -138,6 +136,14 @@ cursor: pointer;
   @media screen and (min-width: 900px) {
       span.part { display: none; }
   }
+
+
+  @media screen and (max-width: 900px) {
+    span.fullString2 { display: none; }
+}
+@media screen and (min-width: 900px) {
+    span.part2 { display: none; }
+}
   
        .info-buttons {
         background: none;
@@ -197,6 +203,8 @@ width: 85vw;
 margin: 0 auto;
 max-width: 100vw;
 overflow-x: hidden;
+flex:1;
+
 
 
  > .page-nav .awardimg{
@@ -214,7 +222,20 @@ overflow-x: hidden;
     text-align: center;
     align-content: center;
     width: 12vw;
+    height:195px ;
     cursor: pointer;
+
+    @media screen and (width <=1500px){
+     margin: 1rem;
+     height: 150 ;
+     }
+  
+     @media screen and (width <=560px){
+     height: 90px;
+     width: 120px;
+     margin: 0 , 1rem;
+  
+     }
     
 
     > a{
@@ -236,6 +257,16 @@ overflow-x: hidden;
    border-radius: 20px;
    margin-bottom: 0.1rem;
    width: 30vw;
+
+   @media screen and (width <=1200px){
+    height: 200px;
+    margin-top: 0.5rem;
+   }
+
+   @media screen and (width <=560px){
+    display: none;
+    margin: 0;
+   }
       
   }
 }
@@ -263,6 +294,18 @@ overflow: hidden;
 > img{
   grid-area: 1 , 2 , 2 , 3 ;
 }
+
+}
+
+.contactform {
+  font-family: Arial, Helvetica, sans-serif;
+  
+  >form {
+    border-radius: 5px;
+    background-color: var(--background-500);
+    padding: 20px;
+  }
+  
 
 }
 
