--- a/utilityE.scss
+++ b/utilityE.scss
@@ -69,3 +69,11 @@
 .footer{
   background: var(--background-600);
 }
+
+.main{
+  background: var(--text-200);
+}
+
+body{
+  background: var(--text-200);
+}
