--- a/compositionE.scss
+++ b/compositionE.scss
@@ -14,11 +14,42 @@ body{
     align-items: center; 
     background-color: var(--background-600);
 
+    #address {
+        text-align:center;
+        padding: 40px;
+        font-size: 2.3rem;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: 700;
+        background-color: var(--accent-200);
+        margin:auto;
+        height: 30vh;
+        width: 95vw;
+        border-radius: 15%;
+        line-height: 1;
+        align-content: center;
+
+      }
+
+      #phone {
+        text-align:center;
+        padding: 40px;
+        font-size: 2.3rem;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: 700;
+        background-color: var(--accent-200);
+        margin:auto;
+        height: 30vh;
+        width: 95vw;
+        border-radius: 15%;
+        line-height: 1;
+        align-content: center;
+}
+
         
     
     > h1 {
         font-weight: 500;
-        font-size: 2.5rem;
+        font-size: 3rem;
         letter-spacing: 0.35em;
         font-style: italic;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -108,8 +139,24 @@ body{
       text-decoration: none;
       cursor: pointer;
 
+      @media (min-width:3000px) {
+        font-size: 3.5rem;
+        
+    }
+      @media (min-width:2000px) {
+        font-size: 2.8rem;
+        
+    }
+      @media (min-width:1500px) {
+        font-size: 2.4rem;
+        
+    }
       @media (max-width:1200px) {
-        font-size: 1.1rem;
+        font-size: 1.4rem;
+        
+    }
+    @media (max-width:725px) {
+        font-size: 1.2rem;
         
     }
     @media (max-width:695px) {
@@ -170,16 +217,11 @@ body{
 
 
 .main{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 1fr);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
-    background-color: var(--text-200);
 
     .top-main{
-        grid-area: 1 / 1 / 2 / 4;
         font-size: 1.6rem;
 
         @media (min-width: 1500px) {
@@ -206,13 +248,9 @@ body{
         p{
             margin-top: 2rem;
         }
-        h2{
-            margin-top: 2rem;
-        }
     }
 
     .first-event-pargraph{
-       grid-area: 2 / 1 / 3 / 4;
        margin: 1rem;
        font-size: 1rem;
 
@@ -240,8 +278,7 @@ body{
     }
 
     .information-paragraph{
-        grid-area: 2 / 1 / 3 / 4;
-        font-size: 1rem;
+        font-size: 2rem;
 
         @media (min-width: 1500px) {
             font-size: 1.4rem;
@@ -260,21 +297,37 @@ body{
             
         }
     
-           @media (max-width: 150px) {
-            font-size: 0.5rem;
+           @media (max-width: 350px) {
+            font-size: 1rem;
             
         }
     }
+    
 
     .img-1{
-        grid-area: 3 / 1 / 5 / 4;
-        padding: 0.3rem;
-        // width: 500px;
+        padding-inline: 0.5rem;
+    }
+    
+    button{
+        margin: 1rem;
+        a{
+            @media (max-width: 332px) {
+                font-size: 0.9rem;  
+            }
+            @media (max-width: 310px) {
+                font-size: 0.7rem;
+            }
+            @media (max-width: 260px) {
+                font-size: 0.6rem;
+            }
+            @media (max-width: 210px) {
+                font-size: 0.4rem;
+            }
+            @media (max-width: 160px) {
+                font-size: 0.2rem;
+            }
+        }
 
-        // @media (max-width: 680px) {
-        //     width: 650px;
-            
-        // }
     }
 }
 
