--- a/compositionM.scss
+++ b/compositionM.scss
@@ -14,6 +14,37 @@ body{
     align-items: center; 
     background-color: var(--background-600);
 
+    #address {
+        text-align:center;
+        padding: 40px;
+        font-size: 2.3rem;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: 700;
+        background-color: var(--accent-200);
+        margin:auto;
+        height: 30vh;
+        width: 95vw;
+        border-radius: 15%;
+        line-height: 1;
+        align-content: center;
+
+      }
+
+      #phone {
+        text-align:center;
+        padding: 40px;
+        font-size: 2.3rem;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: 700;
+        background-color: var(--accent-200);
+        margin:auto;
+        height: 30vh;
+        width: 95vw;
+        border-radius: 15%;
+        line-height: 1;
+        align-content: center;
+}
+
         
     
     > h1 {
