--- a/utilities.scss
+++ b/utilities.scss
@@ -74,7 +74,7 @@
     overflow-x: hidden;
 
     
-    @media screen and  (width<= 1180px) {
+    @media screen and  (width <= 1180px) {
        max-width: 100vw;
       
     }
@@ -310,6 +310,11 @@ margin: 1rem;
 
 .contactform {
   font-family: Arial, Helvetica, sans-serif;
+
+  
+  @media screen and (width <=430px){
+    width: 100vw;
+  }
   
   >form {
     border-radius: 5px;
@@ -317,7 +322,8 @@ margin: 1rem;
     padding: 20px;
 
     @media screen and (width <=430px){
-      width: 100%;
+      width: 90vw;
+      font-size: 0.8rem;
     }
 
 
@@ -333,6 +339,16 @@ margin: 1rem;
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
+
+}
+
+#subject{
+  
+  @media screen and (width <=430px){
+   
+    font-size: 0.8rem;
+  }
+  
 }
  
 >input[type=submit] {
@@ -343,6 +359,7 @@ margin: 1rem;
   border-radius: 4px;
   cursor: pointer;
   width: 100px;
+
 }
 
 .submit:hover{
