--- a/utilities.scss
+++ b/utilities.scss
@@ -358,17 +358,21 @@ margin: 1rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 100px;
-
+  
 }
 
-.submit:hover{
+
+
+.submit{
+margin-left: 2rem;
+
+&:hover{
   background-color: var(--background-200);
   scale: 1.5;
   transition: scale 150ms;
 
 }
-
+}
 }
 
 .contactsimg{
@@ -378,6 +382,10 @@ margin: 1rem;
     display: none;
   }
  
+}
+
+.end{
+  margin-top: auto;
 }
 
 .footer{
