--- a/composition.scss
+++ b/composition.scss
@@ -11,7 +11,8 @@
 
     
     @media screen and  (width <= 1180px) {
-       max-width: 100vw;  
+       max-width: 99vw;  
+       overflow-x: hidden;
     }
   > h1 {
       font-weight: 900;
